# MTProthon

./: LICENSE  README.md  pyproject.toml
code_generator/: mtproto.tl
mtprothon/network/: __init__.py  connection.py  tcp.py  tcpabridged.py
mtprothon/type_language/: __init__.py  core.py  functions.py  primitives.py  tlobject.py  types.py
tests/: connections.py
